# Yolo-Model-Visualizer

./: .gitignore  Makefile  README.md  Yolov5.txt  program.bat  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
yolo_detection_app/: detector.py  main.py  thresholds.json
yolo_detection_app/api/: update.py
yolo_detection_app/templates/: index.html
